--- a/frontend/index.html
+++ b/frontend/index.html
@@ -53,5 +53,6 @@
     <script src="https://cdn.jsdelivr.net/npm/web3@latest/dist/web3.min.js"></script>
     <script src="https://unpkg.com/moralis/dist/moralis.js"></script>
     <script src="main.js"></script>
+    <script src="abi.js"></script>
 </body>
 </html>
