renderItems && ChefMarketPlace contract

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -11,6 +11,7 @@
         <button id="btnConnect">Connect wallet</button>
         <button id="btnUserInfo">Profile</button>
         <button id="btnOpenCreateItem">Create</button>
+        <button id="btnMyItems">My Items</button>
     </div>
 
     <div id="userInfo">
@@ -48,6 +49,18 @@
         <button id="btnCloseCreateItem">Close</button>
         <button id="btnCreateItem">Create!</button>
 
+    </div>
+
+    <div id="userItems">
+        <h4>My Items</h4>
+        <div id="userItemsList"></div>
+        <button id="btnCloseUserItems">Close</button>
+    </div>
+
+    <div id="itemTemplate">
+        <img src="" alt="">
+        <h5></h5>
+        <p></p>
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/web3@latest/dist/web3.min.js"></script>
